Fixed #145 - Now the advise only appears on ie7/8 Fixed #146 and #147 - Now pagination works properly when coming from advanced search - Now, when coming from advanced search we are still able to see the query we made

--- a/emif/emif/static/css/main.css
+++ b/emif/emif/static/css/main.css
@@ -307,8 +307,11 @@ box-shadow: inset 0 3px 8px rgba(0,0,0,0.125);
 .ns .supported {
     display: block !important;
 }
-
+ #supportability{
+    display: none;
+}
 .ns #supportability{
+    display: block !important;
     background-color: orange;
     color: white;
     padding: 5px;
